--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,58 +1,24 @@
-<div class="logo">
-  <a href="#">GoMobile</a>
+<div class="toolbar" role="banner">
+  <img width="40" alt="Logo" src="assets/images/logo.png" />
+  <span>Tianos</span>
 </div>
 
-<div class="menu">
-  <ul>
-    <li class="green">
-      <a href="#" onclick="swiperParent.swipeTo(1);">
-        <img src="http://themes.sindevo.com/gomobile/go-mobile-onepage/images/icons/about.png" alt="" title="">
-        <span>About Us</span>
-      </a>
-    </li>
-    <li class="red">
-      <a href="#" onclick="swiperParent.swipeTo(2);">
-        <img src="http://themes.sindevo.com/gomobile/go-mobile-onepage/images/icons/tools.png" alt="" title="">
-        <span>Services</span>
-      </a></li>
-    <li class="blue">
-      <a href="#" onclick="swiperParent.swipeTo(3);">
-        <img src="http://themes.sindevo.com/gomobile/go-mobile-onepage/images/icons/blog.png" alt="" title="">
-        <span>Blog</span>
-      </a>
-    </li>
-    <li class="orange">
-      <a href="#" onclick="swiperParent.swipeTo(4);">
-        <img src="http://themes.sindevo.com/gomobile/go-mobile-onepage/images/icons/docs.png" alt="" title="">
-        <span>Portfolio</span>
-      </a>
-    </li>
-    <li class="purple">
-      <a href="#" onclick="swiperParent.swipeTo(5);">
-        <img src="http://themes.sindevo.com/gomobile/go-mobile-onepage/images/icons/photos.png" alt="" title="">
-        <span>Gallery</span>
-      </a>
-    </li>
-    <li class="yellow">
-      <a href="#" onclick="swiperParent.swipeTo(6);">
-        <img src="http://themes.sindevo.com/gomobile/go-mobile-onepage/images/icons/clients.png" alt="" title="">
-        <span>Clients</span>
-      </a>
-    </li>
-    <li class="pink">
-      <a href="#" onclick="swiperParent.swipeTo(7);">
-        <img src="http://themes.sindevo.com/gomobile/go-mobile-onepage/images/icons/twitter.png" alt="" title="">
-        <span>Twitter</span>
-      </a>
-    </li>
-    <li class="bluegreen">
-      <a href="#" onclick="swiperParent.swipeTo(8);">
-        <img src="http://themes.sindevo.com/gomobile/go-mobile-onepage/images/icons/contact.png" alt="" title="">
-        <span>Contact</span>
-      </a>
-    </li>
-  </ul>
-  <div class="clearfix"></div>
-</div>
+<nav class="navbar">
+  <div class="navbar-brand">
+    <a class="navbar-item">
+      xxxx
+    </a>
+  </div>
+</nav>
 
 <router-outlet></router-outlet>
+
+<footer class="footer">
+  <div class="container">
+    <div class="content has-text-centered">
+      <p>
+        Made with <3 by <a href="https://twitter.com/chrisoncode">Chris from Scotch</a>
+      </p>
+    </div>
+  </div>
+</footer>
