--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,5 @@
-<div class="toolbar" role="banner">
-  <img width="40" alt="Logo" src="assets/images/logo.png" />
-  <span>Tianos</span>
-</div>
-
-<nav class="navbar">
-  <div class="navbar-brand">
-    <a class="navbar-item">
-      xxxx
-    </a>
-  </div>
-</nav>
+<app-header></app-header>
 
 <router-outlet></router-outlet>
 
-<footer class="footer">
-  <div class="container">
-    <div class="content has-text-centered">
-      <p>
-        Made with <3 by <a href="https://twitter.com/chrisoncode">Chris from Scotch</a>
-      </p>
-    </div>
-  </div>
-</footer>
+<app-footer></app-footer>
