--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0;
+  font-size: 12px;
+  margin: 0 auto;
+  height: 100%;
+  position: relative;
+  line-height: 19px;
+}
+.x-hand {
+  cursor: pointer;
+}
